# python-web-pdb

./: .gitignore  .pylintrc  .travis.yml  Changelog.rst  Dockerfile  LICENSE.txt  MANIFEST.in  Readme.rst  docker-compose.yaml  nginx.conf  requirements.txt  server.py  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: publish.yml  tests.yml  web-pdb.yml
frontend/: .eslintignore  .eslintrc.js  Readme.rst  package-lock.json  package.json  webpack.config.js
frontend/src/: button_events.js  globals.js  index.js  key_events.js  prism-line-numbers.js  styles.css  theme.js  update_ui.js  utils.js  write_to_console.js
tests/: __init__.py  db.py  db_i.py  db_pm.py  db_ps.py  tests.py
web_pdb/: __init__.py  buffer.py  pdb_py2.py  web_console.py  wsgi_app.py
web_pdb/static/: bundle.min.js  bundle.min.js.LICENSE.txt  styles.min.css
web_pdb/static/css/: prism.css  web-console.css
web_pdb/static/js/: prism.js  web-console.js
web_pdb/templates/: index.html
