[metadata]
name = web-pdb
version = 1.6.3
author = Roman Miroshnychenko
author_email = roman1972@gmail.com
url = https://github.com/romanvm/python-web-pdb
description = Web interface for Python's built-in PDB debugger
long_description = file: Readme.rst
long_description_content_type = text/x-rst
keywords = pdb remote web debugger'
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Bottle
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Debuggers
platform = any

[options]
packages =
    web_pdb
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    bottle>=0.12.25
    asyncore-wsgi>=0.0.11
test_suite = tests.tests
tests_require =
    selenium==4.10.0
